--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="styles.css">
     <title>Testimonials Grid Section</title>
   </head>
   <body>
